--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "-": "^0.0.1",
     "@supabase/supabase-js": "^2.50.2",
     "@tailwindcss/vite": "^4.1.5",
+    "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.0.0",
