--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.3",
     "react-router-dom": "^7.6.2",
